# RenderingEngine

./: .gitignore  Engine.sln  README.md
CMakeModules/: FindGLFW.cmake
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  main.cpp
Engine/Entities/: IEntity.h  Player.cpp  Player.h
Engine/EventSystem/: EventManager.h
Engine/EventSystem/Dispatcher/: DispatchStrategy.h  QueueDispatchStrategy.cpp  QueuedDispatchStrategy.h
Engine/EventSystem/Event/: EntityMovedEvent.cpp  EntityMovedEvent.h  Event.h  KeyUpEvent.cpp  KeyUpEvent.h
Engine/EventSystem/Listener/: EventListener.cpp  EventListener.h  KeyDownEventListener.h  KeyEventListener.cpp  KeyEventListener.h
Engine/EventSystem/Listener/Strategy/: ListenerStrategy.h  SaveListenerStrategy.cpp  SaveListenerStrategy.h
Engine/src/: main.cpp
Engine/src/Entities/: IEntity.h  Player.cpp  Player.h
Engine/src/EventSystem/: EventManager.h  EventSystem.cpp  EventSystem.h  KeyboardEventManager.cpp  KeyboardEventManager.h  MouseEventManager.cpp  MouseEventManager.h
Engine/src/EventSystem/Dispatcher/: DispatchStrategy.h  QueueDispatchStrategy.cpp  QueuedDispatchStrategy.h  QueuedEventDispatchStrategy.h
Engine/src/EventSystem/Event/: EntityMovedEvent.cpp  EntityMovedEvent.h  Event.cpp  Event.h  KeyDownEvent.cpp  KeyDownEvent.h  MouseMoveEvent.h
Engine/src/EventSystem/Listener/: EventListener.cpp  EventListener.h  KeyDownEventListener.cpp
Engine/src/Exception/: OpenGLException.h
Engine/src/Material/: Material.cpp  Material.h
Engine/src/Material/Shader/: Shader.cpp  Shader.h
Engine/src/Render/: Light.h  RenderableObject.h
Engine/src/Render/Camera/: Camera.cpp  Camera.h
Engine/src/Render/Geometry/: Geometry.cpp  Geometry.h
Engine/src/Render/Light/: DirectionalLight.h  Light.h
Engine/src/Render/Material/: Material.cpp  Material.h
Engine/src/Render/Renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h  RenderWindow.h
Engine/src/Render/Scene/: MoveableObject.h  RenderableObject.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h
Engine/src/Scene/: MoveableObject.h  SceneManager.h  SceneNode.cpp  SceneNode.h
Engine/src/util/: ComparableObject.cpp  ComparableObject.h
Engine/src/util/Exceptions/: InvalidArgumentException.h
Engine/src/util/Math/: MathUtil.h  Matrix.cpp  Matrix.h
Engine/src/util/ShaderHelper/: glslHelper.cpp  glslHelper.h
Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters
Game/src/: CubeEntity.cpp  CubeEntity.h  GlfwRenderWindow.cpp  GlfwRenderWindow.h  Player.cpp  Player.h  main.cpp
Game/src/Entities/: Player.cpp  Player.h
Game/src/Entities/Cube/: CubeEntity.cpp  CubeEntity.h  CubeGeometry.cpp  CubeGeometry.h  CubeMaterial.cpp  CubeMaterial.h
Game/src/Entities/Floor/: FloorEntity.cpp  FloorEntity.h  FloorGeometry.cpp  FloorGeometry.h  FloorMaterial.cpp  FloorMaterial.h
Game/src/Entities/Light/: DirectionalLightEntity.cpp  DirectionalLightEntity.h  LightEntity.cpp  LightEntity.h  LightMaterial.cpp  LightMaterial.h  SphereGeometry.cpp  SphereGeometry.h
Game/src/RenderPasses/: RenderToScreenPass.cpp  RenderToScreenPass.h  ShadowMapPass.cpp  ShadowMapPass.h
Game/src/ShaderSource/: diffuse.fs  diffuse.vs  movingtri.vs  shadowmapfirstpass.fs  shadowmapfirstpass.vs  shadowmapsecondpass.fs  shadowmapsecondpass.vs  solidcolor.fs  solidcolor.vs
Game/src/camera/: Camera.cpp  Camera.h
Game/src/shaders/: movingtri.fs  movingtri.vs
(+17 files in other folders)
